--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -74,6 +74,7 @@ header a:hover, header a:active {
     color: @secondary-light-color;;
 }
 
+.set-li-icon(contact-qq, @fa-var-qq);
 .set-li-icon(contact-phone, @fa-var-phone);
 .set-li-icon(contact-email, @fa-var-envelope);
 .set-li-icon(contact-github, @fa-var-github-square);
