--- a/src/jade/mixins/util.jade
+++ b/src/jade/mixins/util.jade
@@ -1,30 +1,18 @@
 mixin phone(number)
   li.contact-phone&attributes(attributes)= number
 
+mixin qq(number)
+  li.contact-qq&attributes(attributes)= number
+  
 mixin email(addr)
   li.contact-email&attributes(attributes)
     a(href="mailto://" + addr)= addr
-
-mixin sinaweibo(data)
-  li.contact-sinaweibo&attributes(attributes)
-    a(href=data.url)= data.id
 
 mixin github(data)
   li.contact-github&attributes(attributes)
     a(href="https://github.com/" + data.id)= "https://github.com/" + data.id
 
-mixin blog(data)
-  li.contact-blog&attributes(attributes)
-    a(href=data.url)= data.url
 
-mixin qrcode(data)
-  img.qrcode-img(src=data.qrcode, alt=data.id)&attributes(attributes)
-
-mixin wechat(data)
-  li.contact-wechat&attributes(attributes)= data.id
-
-mixin responsive(mixin_name, data, res_class)
-  +#{mixin_name}(data)(class=res_class)
 
 mixin section(sec_class, timeline)
   section(class=sec_class)
