--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -17,7 +17,7 @@ block education
 block language
   +section("language", false)
     each lang in language
-      +certificate(lang.certificate)
+      //+certificate(lang.certificate)
       ul.language-description
         each desc in lang.description
           li.language-desc-item= desc
@@ -50,4 +50,4 @@ block links
 block repo
   p
     | This resume is generated with Gulp, Less and Jade by 
-    | #[a(href="https://github.com/joyeecheung/resume") Joyee Cheung&#39;s resume generator].
+    | #[a(href="https://github.com/coesky/resume") Liu Zhe &#39;s resume generator].
